--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@toomuchdesign/npm-package-template",
+  "name": "@toomuchdesign/ajv-type-provider-json-schema-to-ts",
   "version": "0.0.0",
-  "description": "",
+  "description": "An ajv type provider based on json-schema-to-ts",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "sideEffects": false,
@@ -25,19 +25,23 @@
   "keywords": [],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/toomuchdesign/npm-package-template.git"
+    "url": "git+https://github.com/toomuchdesign/ajv-type-provider-json-schema-to-ts.git"
   },
   "author": "Andrea Carraro <me@andreacarraro.it>",
   "license": "ISC",
   "devDependencies": {
     "@changesets/cli": "^2.27.1",
-    "@tsconfig/node18": "^18.2.2",
+    "@tsconfig/node18": "^18.2.3",
     "@vitest/coverage-v8": "^1.4.0",
     "prettier": "^3.2.5",
     "rimraf": "^5.0.5",
     "simple-git-hooks": "^2.11.0",
     "typescript": "^5.4.3",
     "vitest": "^1.3.0"
+  },
+  "peerDependencies": {
+    "ajv": "^8.0.0",
+    "json-schema-to-ts": "^3.0.0"
   },
   "simple-git-hooks": {
     "pre-commit": "npm run source:check && npm test -- --run"
