--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "sideEffects": false,
+  "private": false,
   "files": [
     "dist"
   ],
@@ -28,6 +29,9 @@
     "json-schema-to-ts",
     "type provider"
   ],
+  "publishConfig": {
+    "access": "public"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/toomuchdesign/ajv-type-provider-json-schema-to-ts.git"
