--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,7 +4,18 @@ updates:
     directory: '/'
     schedule:
       interval: 'daily'
+    groups:
+      vitest:
+        patterns:
+          - 'vitest'
+          - '@vitest/*'
+
   - package-ecosystem: 'github-actions'
     directory: '/'
     schedule:
       interval: 'daily'
+    groups:
+      upload-download-artifact:
+        patterns:
+          - 'actions/upload-artifact'
+          - 'actions/download-artifact'
