--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          token: ${{ secrets.READ_AND_WRITE_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - uses: actions/setup-node@v4
         with:
@@ -24,7 +24,10 @@ jobs:
 
       - name: Create release pull request
         uses: changesets/action@v1
+        permissions:
+          pull-requests: write
+          contents: write
         with:
           publish: npm run tag
         env:
-          GITHUB_TOKEN: ${{ secrets.READ_AND_WRITE_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
